--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.quick.voice</groupId>
   <artifactId>QuickEngine</artifactId>
-  <version>1.0.9</version>
+  <version>1.1.0</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -76,7 +76,7 @@
       <groupId>com.github.yvws</groupId>
       <artifactId>RTCAndroid</artifactId>
       <version>1.0.1</version>
-      <scope>runtime</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>com.github.yvws</groupId>
