--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.quick.voice</groupId>
   <artifactId>QuickEngine</artifactId>
-  <version>1.1.9</version>
+  <version>1.2.0</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -81,6 +81,18 @@
     <dependency>
       <groupId>com.github.yvws</groupId>
       <artifactId>QuickBeauty</artifactId>
+      <version>1.0.2</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.mlkit</groupId>
+      <artifactId>segmentation-selfie</artifactId>
+      <version>16.0.0-beta6</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.jenly1314</groupId>
+      <artifactId>libyuv</artifactId>
       <version>1.0.0</version>
       <scope>runtime</scope>
     </dependency>
