--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,3 @@
 install:
-  - FILE="-Dfile=QuickEngine-1.4.1.aar"
-  - mvn install:install-file $FILE -DgroupId=com.quick.voice -DartifactId=QuickEngine -Dversion=1.4.1 -Dpackaging=aar -DpomFile=pom.xml
+  - FILE="-Dfile=QuickVoice-1.4.2.aar"
+  - mvn install:install-file $FILE -DgroupId=com.quick.voice -DartifactId=QuickVoice -Dversion=1.4.2 -Dpackaging=aar -DpomFile=pom.xml
