--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.quick.voice</groupId>
   <artifactId>QuickVoice</artifactId>
-  <version>1.5.2</version>
+  <version>1.5.3</version>
   <packaging>aar</packaging>
   <build>
     <plugins>
@@ -49,15 +49,21 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>com.github.yvws</groupId>
-      <artifactId>QuickBase</artifactId>
+      <groupId>com.github.runningboys</groupId>
+      <artifactId>libyuv</artifactId>
       <version>1.0.3</version>
-      <scope>compile</scope>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>com.github.yvws</groupId>
       <artifactId>RTCAndroid</artifactId>
       <version>1.0.2</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.github.yvws</groupId>
+      <artifactId>QuickBase</artifactId>
+      <version>1.0.4</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
